<resources>
    <string name="app_name">Simon Says</string>
    <string name="title">Simon Says!</string>
    <string name="start_button">Start</string>
    <string name="settings_button">Settings</string>
    <string name="back">Back</string>
    <string name="config">Game Configuration</string>
    <string name="play">Play!</string>
    <string name="simon_turn">Simon\'s Turn!</string>
    <string name="player_turn">Your Turn!</string>
    <string name="current_score">Current Score: %d</string>
    <string name="end_game">End Game</string>
    <string name="results">Game Over!</string>
    <string name="your_score">Your Score: %d</string>
    <string name="play_again">Play Again?</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="theme">Theme</string>
    <string name="cbmode">Colorblind Mode</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
</resources>